@@ -1,3 +1,7 @@
+2004-01-19  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* visual: locking files routines
+
 2004-01-15  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* visual: added tools
